app-manifests/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: signin-app
  labels:
    app.kubernetes.io/name: signin-app
    app.kubernetes.io/part-of: signin-platform
