app-manifests/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: signin-api
  namespace: signin-app
  labels:
    app: signin-api
    app.kubernetes.io/name: signin-api
    app.kubernetes.io/component: api
spec:
  type: LoadBalancer
  selector:
    app: signin-api
  ports:
  - name: http
    port: 80
    targetPort: 8080
    protocol: TCP
  sessionAffinity: None
